@@ -1,3 +1,2 @@
-02/02/2026:
-[!] I am so sorry for being so slow on the updates, again. I'll try to speed them up to the regular pace soon.
-[+] Fixed Acid Bunny & Acid Bunny 2
+02/08/2026:
+[+] Added Grand Theft Auto: Vice City (The first unblocked games website to do this!) (Please don't sue me Rockstar!)
