@@ -20,6 +20,10 @@ people who don't  have a clue  what they're doing and use ChatGPT to  "code"
 their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
+02/08/2026:
+[+] Added Grand Theft Auto: Vice City (The first unblocked games website to
+do this!) (Please don't sue me Rockstar!)
+
 02/02/2026:
 [!] I am so sorry for being so slow on the updates, again. I'll try to speed 
 them up to the regular pace soon.
